# Mario-RL-NNS

./: .gitignore  README.md  pyproject.toml
012_writeup/: methods.md  paired_delta_stats.csv  paper_outline.md  per_seed_250k.csv  results_table.csv  results_table.md
artifacts/analysis/: 006_external_checkpoint_audit.md  010_time_tail_analysis.csv  010_time_tail_analysis.md  010_time_tail_paired_seed_table.csv
artifacts/benchmarks/rtx4090_python313_cuda126_nenv_sweep/: summary.md  throughput.csv
artifacts/benchmarks/rtx4090_python313_cuda126_tuned_sweep/: summary.md  throughput.csv
configs/: baseline_ppo.yaml  flat_penalty_ppo.yaml  nns_lpm_clip_small_ppo.yaml  nns_lpm_low_target_ppo.yaml  nns_lpm_no_stuck_ppo.yaml  nns_lpm_ppo.yaml  nns_lpm_soft_ppo.yaml  nns_lpm_very_soft_ppo.yaml  nns_lpm_warmup_soft_ppo.yaml  nns_upm_lpm_ppo.yaml
docs/: ALL_RUNS.md
scripts/: 03_train_smoke.sh  04_bench_instance.sh  05_run_baseline.sh  06_run_1m_diagnostic_sweep.sh  07_run_5m_pilot.sh  08_run_2m_nns_tuning.sh  09_run_5m_selected_nns.sh  10_run_high_confidence_time_tail.sh  11_run_10seed_250k_time_tail.sh  12_make_writeup_figures.py  bench_instance.sh  check_nns.sh  run_1m_diagnostic_sweep.sh  smoke_env.sh  train_smoke.sh
src/mario_rl_nns/: benchmark_instance.py  evaluate.py  external_checkpoint.py  make_env.py  nns_rewards.py  ram_adapter.py  reward_wrappers.py  summarize.py  train_sb3.py  wrappers.py
tests/: test_evaluate.py  test_external_checkpoint.py  test_nns_rewards.py  test_ram_adapter.py  test_reward_wrappers.py
